from datetime import datetime
from typing import Optional
from uuid import UUID, uuid4

from enum import Enum


class Role(str, Enum):
    ADMIN = "admin"
    USER = "user"


class User:
    def __init__(
        self,
        id: Optional[UUID] = None,
        email: str = None,
        hashed_password: str = None,
        full_name: Optional[str] = None,
        role: Role = Role.USER,
        is_active: bool = True,
        last_login: Optional[datetime] = None,
        created_at: Optional[datetime] = None,
        updated_at: Optional[datetime] = None,
        deleted_at: Optional[datetime] = None,
        deleted_by: Optional[UUID] = None,
        deletion_reason: Optional[str] = None,
    ):
        self.id = id or uuid4()
        self.email = email
        self.hashed_password = hashed_password
        self.full_name = full_name
        self.role = role
        self.is_active = is_active
        self.last_login = last_login
        self.created_at = created_at or datetime.utcnow()
        self.updated_at = updated_at or datetime.utcnow()
        self.deleted_at = deleted_at
        self.deleted_by = deleted_by
        self.deletion_reason = deletion_reason
